--- a/PAGES/3b_univariables/index.html
+++ b/PAGES/3b_univariables/index.html
@@ -2031,8 +2031,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections &#40;i.e., variables containing multiple elements, such as vectors and matrices&#41;. </p>
-<p>This section exclusively focuses on single-element variables. In particular, we&#39;ll study several data types related to numbers.</p>
+<p>The previous section introduced the concept of variables, distinguishing between those containing a single element and those acting as collections &#40;i.e., variables containing multiple elements, such as vectors and matrices&#41;. This section exclusively focuses on numeric single-element variables. </p>
 <p>      </div>
     </div>
   </div>
@@ -2042,7 +2041,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers use various representations for numbers, with integers and real numbers treated as different objects. Furthermore, several representations arise according to  the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
+<p>Computers use various representations for numbers, with integers and real numbers treated as different objects. Furthermore, several representations arise according to the level of precision aimed. These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
 <p>The default types for numbers in Julia are:</p>
 <ul>
 <li><p><code>Int64</code> for integers.</p>
@@ -2147,7 +2146,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, it d
 </tbody>
 </table>
  <br/></p>
-<p>It&#39;s worth noting that all the operators presented above are  <em> binary</em>, entailing that their syntax is <code>x &lt;symbol&gt; y</code> &#40;recall the discussion <a href="/julia_book/PAGES/3a_variables/#operators">here</a> on the syntax of operators.&#41;.</p>
+<p>It&#39;s worth noting that all the operators presented above are  <em> binary</em>. This determines that their syntax is <code>x &lt;symbol&gt; y</code> &#40;recall the discussion <a href="/julia_book/PAGES/3a_variables/#operators">here</a> on the syntax of operators.&#41;.</p>
 <p>      </div>
     </div>
   </div>
