--- a/PAGES/4a1_define_func/index.html
+++ b/PAGES/4a1_define_func/index.html
@@ -2031,10 +2031,10 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Recall that Functions can be classified into three:  <em> i)</em> built-in functions,  <em> ii)</em> third-party functions, and  <em> iii)</em> user-defined functions. The previous section has covered the first two, and we now focus on the  <em> iii)</em>.</p>
+<p>Functions can be classified into three:  <em> i)</em> built-in functions,  <em> ii)</em> third-party functions, and  <em> iii)</em> user-defined functions. The previous section has covered the first two, and we now focus on the  <em> iii)</em>.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> - Notation </span>  </div>  <div class=content>     Developers of Julia and their packages <strong> denote functions by using lowercase letters</strong>, such as <code>sum</code> or <code>log</code>. Note this is only a convention.  </div>  </div>
+      <b>Remark</b> - Notation </span>  </div>  <div class=content>     Developers of Julia and their packages <strong> denote functions by using lowercase letters</strong>, such as <code>sum</code> or <code>log</code>. Note that this is only a convention, not a requirement.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2044,7 +2044,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>User-Defined Functions</h2></p>
-<p>When you write a script in Julia, you&#39;ll often need to define your own functions. These functions can then be called without using any prefix. For instance, if you define a function <code>foo</code>, you can run it through <code>foo&#40;x&#41;</code>, rendering any prefix unnecessary.</p>
+<p>When you write a script in Julia, you&#39;ll often need to define your own functions. These functions can then be called without using any prefix. For instance, if you define a function <code>foo</code>, you can run it through <code>foo&#40;x&#41;</code>.</p>
 <p> <!-- Trigger/Open The Modal -->
 <div style="text-indent:0;"> <button class="modalButton">
   <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"> Remark - Modules <strong> (OPTIONAL)</strong> </button> </div>
@@ -2065,7 +2065,7 @@ color: white;
   </div>
 
 </div> </p>
-<p>There are two ways to define functions. We&#39;ll refer to them as <strong> the standard form</strong> and <strong> the compact form</strong>. The standard form is the most general, and resembles how functions are commonly defined in programming languages. Conversely, the compact form is typically used for single-line functions, and is akin to how functions are defined in mathematics. To illustrate each form, we consider a function <code>foo</code> that performs the sum of two variables <code>x</code> and <code>y</code>. </p>
+<p>There are two ways to define functions. We&#39;ll refer to them as <strong> the standard form</strong> and <strong> the compact form</strong>. The standard form is the most general, and is how functions are commonly defined in programming languages. Conversely, the compact form is typically used for single-line functions, and is akin to how functions are defined in mathematics. To illustrate each form, we consider a function <code>foo</code> that performs the sum of two variables <code>x</code> and <code>y</code>. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2083,7 +2083,9 @@ end</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>The compact form is ideal for concise functions. For its part, the standard form is more general and can be expanded over several lines. Furthermore, it allows the user to specify their outputs through the <code>return</code> keyword, where multiple outputs are possible through a tuple. This means we only need to separate each output through a comma <code>,</code>. If no output is specified, as in the example above, Julia returns the last line as the output. This is worth bearing in mind, as it&#39;s common practice to state the output explicitly through the <code>return</code> keyword.</p>
+<p>The compact form is ideal for concise functions, as they can be written in a single. On the other hand, the standard form can expand over multiple lines if needed. </p>
+<p>In both examples above, no output is explicitly specified. For the compact form, this isn&#39;t needed as there&#39;s only one possible output. As for the standard form, the function returns the last line as its output when none is specified. Nonetheless, you can still specify the output to return, through the keyword <code>return</code>. </p>
+<p>Note that functions can return multiple outputs if we define the result as a tuple &#40;or any other collection&#41;. When the outputs are returned in a tuple, it&#39;s common to omit <code>&#40;&#41;</code>, instead only separating the elements by a comma <code>,</code>. All these approaches to specifying an output are illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2105,7 +2107,7 @@ end</code></pre>
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">function foo&#40;x,y&#41;   
     term1 &#61; x &#43; y
-    term2 &#61; x * y   # output returned
+    term2 &#61; x * y           # output returned
 end</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo&#40;10,2&#41;</code><br/><div class="akin_to_pre">20</div> </div></div> </div> 
@@ -2115,7 +2117,7 @@ end</code></pre>
     term1 &#61; x &#43; y
     term2 &#61; x * y 
 
-    return term1, term2
+    return term1, term2     # a tuple
 end</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo&#40;10,2&#41;</code><br/><div class="akin_to_pre">2-element Vector{Int64}:
@@ -2135,8 +2137,7 @@ end</code></pre>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     Names of functions adhere to the same rules as variable names, permitting in particular the use of Unicode characters. Thus, defining a function <code>∑&#40;x,y&#41;</code> is completely valid. Indeed, several symbols used as operators are also employed to denote functions, such as <code>&#43;&#40;x,y&#41;</code> for summing <code>x</code> and <code>y</code>.</p>
-<p>This is why several operators are also available as functions. For instance, considering <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
+      <b>Remark</b> </span>  </div>  <div class=content>     Names of functions adhere to the same rules as variable names, thus permitting the use of Unicode characters. For instance, it&#39;s completely valid to define a function <code>∑&#40;x,y&#41;</code>. Indeed, most of the symbols used as operators are also available as functions. For instance, considering <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
 <p> <div class=" code_box"> <details  open><summary> Arithmetic Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">&#43;&#40;2,3&#41;      # same as 2&#43;3
 -&#40;2,3&#41;      # same as 2-3
@@ -2212,15 +2213,15 @@ result &#61; map&#40;add_two, &#91;1, 2, 3&#93;&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Macros</h2></p>
-<p>Next, we present the so-called macros, whose use is widespread in Julia. They&#39;re usually included to automate tasks that would otherwise be tedious to perform. Our coverage will be brief. In particular, we&#39;ll only explain how to apply macros, without learning how to define them. The reason is that defining macros would require learning Julia&#39;s metaprogramming tools, which are beyond the scope of the website.</p>
-<p>Macros are similar to functions in that they both perform operations on an input. The key difference is that macros take a statement as their argument, whereas functions have variables as their arguments. This means that a macro can take <code>x &#61; some_function&#40;y&#41;</code> as an argument, and provide another statement as an output, where either <code>x</code>, <code>&#61;</code>, and/or <code>some_function&#40;y&#41;</code> are modified. This is particularly useful for transforming code, such as when you want to change the algorithm that implements an operation.</p>
-<p>The syntax of macros involves adding <code>@</code> as a prefix to the macro&#39;s name. The following example demonstrates its application through <code>@time</code>, a built-in macro to measure the running time of executing some code. </p>
+<p>We present next the concept of macros, whose use is widespread in Julia. They&#39;re usually provided in package,s with the goal of automating tasks that are tedious to perform. Our coverage will be brief. In particular, we&#39;ll only explain how to apply macros, without learning how to define them. The reason is that defining macros requires learning Julia&#39;s metaprogramming tools, which are beyond the scope of the website.</p>
+<p>Macros are similar to functions, in that they both perform operations on an input. The key difference is that macros take a statement as their argument, whereas the arguments of functions are variables. Thus, a macro can take <code>x &#61; some_function&#40;y&#41;</code> as an argument, and modify either <code>x</code>, <code>&#61;</code>, and/or <code>some_function&#40;y&#41;</code>. Moreover, macros ca provide another statement as its output. These features make macros particularly useful for transforming code, such as when you want to change the algorithm of an operation.</p>
+<p>Macros are implemented by adding <code>@</code> as a prefix to the macro&#39;s name. For instance, <code>@time</code> is a built-in macro that measures the runtime of some code. </p>
  <div class=" code_box"> <details  open><summary> @time macro  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">@time x &#61; 4 &#43; 5</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat">0.000002 seconds </div></div> </div>   </details></div>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     The application of macros requires extreme caution, as they could act as black boxes that lead to unexpected behaviors. In fact, macros tend to be a common source of bugs. If you apply a macro, make sure you understand which part of the expression is modified and how.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content>     Using macros requires extreme caution, as they could act as black boxes and hence lead to unexpected behaviors. In fact, macros tend to be a common source of bugs. If you apply a macro, make sure you understand which part of the expression is modified and how.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2230,8 +2231,8 @@ result &#61; map&#40;add_two, &#91;1, 2, 3&#93;&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>A Function's Documentation (<strong><i>OPTIONAL</i></strong>)</h2></p>
-<p>We close this section by outlining how to document user-defined functions. This simply requires adding a string expression  <em> right before the definition of the function</em>. </p>
-<p>The description can be accessed in the same manner as built-in functions: you can type the function&#39;s name after pressing  <kbd> ?</kbd> in the REPL, or directly hover over the function&#39;s name if you use VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> We already explained how to access a function&#39;s documentation <a href="/julia_book/PAGES/1c_vscode/#keyboard_shortcuts">here</a>, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
+<p>We close this section by outlining how to document user-defined functions. This is done by adding a string expression  <em> right before the definition of the function</em>. </p>
+<p>The documentation can eventually be accessed in the same manner as with built-in functions: you can type the function&#39;s name after pressing  <kbd> ?</kbd> in the REPL, or directly hover over the function&#39;s name if you use VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> We already explained how to access a function&#39;s documentation <a href="/julia_book/PAGES/1c_vscode/#keyboard_shortcuts">here</a>, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
