--- a/PAGES/1a_installation/index.html
+++ b/PAGES/1a_installation/index.html
@@ -2058,6 +2058,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Installing R and Python (<strong><i>OPTIONAL</i></strong>)</h2></p>
 <p>Julia allows you to call other software from within Julia, including R and Python. This means that, for instance, you can export some data to R/Python from Julia, perform operations on these data, and then import the result back into Julia. This is useful to apply functions that are available in R/Python, but not in Julia. See <a href="/julia_book/links/">Useful Links</a> in case you want to install R or Python.</p>
+<p>If you&#39;re familiar with R and Python, you could find helpful this note, which shows the <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">main differences</a> they have with Julia. Moreover, the following <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> also shows the main syntax differences between Matlab, Python, and Julia.</p>
 <p>      </div>
     </div>
   </div>
