--- a/PAGES/1a_installation/index.html
+++ b/PAGES/1a_installation/index.html
@@ -2058,7 +2058,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Installing R and Python (<strong><i>OPTIONAL</i></strong>)</h2></p>
 <p>Julia allows you to call other software from within Julia, including R and Python. This means that, for instance, you can export some data to R/Python from Julia, perform operations on these data, and then import the result back into Julia. This is useful to apply functions that are available in R/Python, but not in Julia. See <a href="/julia_book/links/">Useful Links</a> in case you want to install R or Python.</p>
-<p>If you&#39;re familiar with R and Python, you could find helpful this note, which shows the <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">main differences</a> they have with Julia. Moreover, the following <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> also shows the main syntax differences between Matlab, Python, and Julia.</p>
+<p>If you&#39;re familiar with R and Python, you could find helpful this note, which shows the <a href="https://docs.julialang.org/en/v1/manual/noteworthy-differences/">main differences</a> they have with Julia. Moreover, the following <a href="https://cheatsheets.quantecon.org/">cheat sheet</a> shows the main syntax differences between Matlab, Python, and Julia.</p>
 <p>      </div>
     </div>
   </div>
@@ -2092,7 +2092,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\2a_basics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 5, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
