--- a/PAGES/5c_forLoops/index.html
+++ b/PAGES/5c_forLoops/index.html
@@ -2056,7 +2056,7 @@ end</code></pre>
 </li>
 </ul>
 <ul>
-<li><p><strong> A list of elements</strong>: this is <code>&#91;&quot;hello&quot;,&quot;beautiful&quot;,&quot;world&quot;&#93;</code> in the example, and represents the elements over which we&#39;ll apply the code block. The list can consist of elements having any data type &#40;e.g., strings, numbers, and even functions&#41;, and it necessarily has to be an   <span style="color: rgb(62, 121, 180);"><strong> iterable object</strong></span>: a container allowing the user to access each element individually. Examples of iterable objects are vectors &#40;as in the example&#41;, but they&#39;re not the only option. One important iterable object that we&#39;ll explore is ranges, which specify vector indices.</p>
+<li><p><strong> A list of elements</strong>: this is <code>&#91;&quot;hello&quot;,&quot;beautiful&quot;,&quot;world&quot;&#93;</code> in the example, and represents the elements over which we&#39;ll apply the code block. The list can consist of elements having any data type &#40;e.g., strings, numbers, and even functions&#41;. The only restriction is that it has to be   <span style="color: rgb(62, 121, 180);"><strong> iterable object</strong></span>, defined as a container allowing the user to access each element individually. Examples of iterable objects are vectors &#40;as in the example&#41;, but they&#39;re not the only option. One important iterable object that we&#39;ll explore is ranges, which specify vector indices.</p>
 </li>
 </ul>
 <ul>
@@ -2510,7 +2510,7 @@ descriptive&#40;vector,list&#41; &#61; &#91;foo&#40;vector&#41; for foo in list&
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\3e_immutables" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 5, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 6, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
