--- a/list_posts/index.html
+++ b/list_posts/index.html
@@ -2651,6 +2651,7 @@ for multiple pics in a row
       h1 {font-size: 200%}
       
         h1 {padding-bottom:0.5em; }
+        .left_bar{visibility: hidden}
       
     }
 
