--- a/PAGES/3b2_strings/index.html
+++ b/PAGES/3b2_strings/index.html
@@ -2067,7 +2067,7 @@ z  &#61; &#39;🐒&#39;       # z equals the character 🐒</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Strings</h2> </p>
-<p>On this website, we&#39;ll rarely use variables of type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>. This is formally defined as a sequence of characters that allows the user to express text. A <code>String</code> expression requires writing the text within double quotes <code>&quot; &quot;</code>. For strings expanding over several lines, triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code> are more convenient.</p>
+<p>On this website, we&#39;ll rarely use variables of type <code>Char</code> directly. Instead, we&#39;ll work with the type <code>String</code>, which is formally an ordered collection of characters.  The type <code>String</code> is used to express text, and is defined within double quotes <code>&quot; &quot;</code>. For strings expanding over several lines, triple quotes <code>&quot;&quot;&quot; &quot;&quot;&quot;</code> are more convenient, as they handle spaces and new lines better. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For the differences between these two approaches, see <a href="https://docs.julialang.org/en/v1/manual/strings/#Triple-Quoted-String-Literals">here</a>  </span></span></p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &quot;Hello, beautiful world&quot;
 
